adding java file

--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 </head>
 <body>
   <main>
-    <div>
-        <h1> coding quiz challenge</h1>
-    </div>
+      <h3 class="timer"></h3>
     <div class="questions">
+        <h1> coding quiz challenge</h1>
         <p>
             Try to answer all question corectly before the timer hit 0. <br> If the question is answered incorrectly time will be taken off.
         </p>
@@ -19,6 +18,8 @@
     <div class="btn">
         <button>start quiz</button>
     </div>
-  </main>   
+    
+  </main> 
+  <script src="script.js"></script>  
 </body>
 </html>
