adding javascript file

--- a/index.html
+++ b/index.html
@@ -9,16 +9,14 @@
 <body>
   <main>
       <h3 class="timer"></h3>
-    <div class="questions">
+    <div class="questionsDiv">
         <h1> coding quiz challenge</h1>
         <p>
             Try to answer all question corectly before the timer hit 0. <br> If the question is answered incorrectly time will be taken off.
         </p>
+        <ul id="choicesUl"></ul>
+        <button class="btn">start quiz</button>
     </div>
-    <div class="btn">
-        <button>start quiz</button>
-    </div>
-    
   </main> 
   <script src="script.js"></script>  
 </body>
