--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p>
             Try to answer all question corectly before the timer hit 0. <br> If the question is answered incorrectly time will be taken off.
         </p>
-        <ul id="choicesUl"></ul>
+        <ul class="choicesUl"></ul>
         <button class="btn">start quiz</button>
     </div>
   </main> 
