updating script.js

--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
       <p>
         Try to answer all question corectly before the timer hit 0. <br> If the question is answered incorrectly time
         will be taken off.
-      </p>
-      <button class="btn">start quiz</button>
+      </p>     
       <h3 class="timer"></h3>
+      <button class="btn">start quiz</button>
+ 
     </section>
 
     <section class="questionsDiv">
 
            <h6 id="user-question"></h6>
-           <button data-value="0" id="option1" class="btn btn-warning"></button>
+           <button data-value="0" id="options1" class="btn btn-warning"></button>
            <button data-value="1" id="options2" class="btn btn-primary"></button>
            <button data-value="2" id="options3" class="btn btn-primary"></button>
            <button data-value="3" id="options4" class="btn btn-primary"></button>
