updating script.js

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
     <section class="questionsDiv">
 
-           <h6 id="user-question"></h6>
+           <h2 id= "user-question" > </h2>
+           <p id="result"></p>
            <button data-value="0" id="options1" class="btn btn-warning"></button>
            <button data-value="1" id="options2" class="btn btn-primary"></button>
            <button data-value="2" id="options3" class="btn btn-primary"></button>
