--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>code quiz</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/style.css" />
 
 </head>
@@ -19,26 +20,36 @@
         will be taken off.
       </p>     
       <h3 class="timer"></h3>
-      <button class="btn">start quiz</button>
+      <button class="btn button">start quiz</button>
  
     </section>
+    <main class="container">
+      <aside class="row">
+        <section class="col-md-10">
+          <section class="questionsDiv">
 
-    <section class="questionsDiv">
-
-           <h2 id= "user-question" > </h2>
-           <p id="result"></p>
-           <button data-value="0" id="options1" class="btn btn-warning"></button>
-           <button data-value="1" id="options2" class="btn btn-primary"></button>
-           <button data-value="2" id="options3" class="btn btn-primary"></button>
-           <button data-value="3" id="options4" class="btn btn-primary"></button>
-    </section>
-
-    <section id="summary">
-      <h4>User Score:<span id="user-score"></span></h4>
-      <label>Enter User name</label>
-      <input id="user-name" type="text"/>
-      <button id="save-user" class="btn">Save User</button>
-    </section>
+            <h2 id= "user-question" > </h2>
+            <p id="result"></p>
+            <button data-value="0" id="options1" class="btn btn-warning button"></button>
+            <button data-value="1" id="options2" class="btn btn-primary button"></button>
+            <button data-value="2" id="options3" class="btn btn-primary button"></button>
+            <button data-value="3" id="options4" class="btn btn-primary button"></button>
+     </section>
+ 
+     <section id="summary">
+       <h2>User Score:<span id="user-score"></span></h2>
+       <label>Enter User name</label>
+       <input id="user-name" type="text"/>
+       <button id="save-user" class="btn button">Save User</button>
+     </section>
+        </section>
+        <section class="col-md-2">
+             <h1>Score Board</h1>
+             <section id="score-container"></section>
+        </section>
+      </aside>
+    </main>
+   
   </main>
   <script src="script.js"></script>
 </body>
